allow-sleep-L7-pt2.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "allow-sleep-to-helloworld"
  namespace: default
spec:
  selector:
    matchLabels:
      istio.io/gateway-name: helloworld
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/sleep"]
    to:
    - operation:
        methods: ["GET"]   
        paths: ["/hello"]   
    when:
    - key: request.headers[test]
      values: ["true"]
